# P4WorkspaceCreator

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
P4WorkspaceCreator/: WorkspaceCreator.py  __main__.py
