[metadata]
name = P4-Workspace-Creator-sachinrising
version = 0.0.4
author = sachin srivastava
author_email = sachinsasr@gmail.com
description = Create perforce workspace from spec file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sachinrising/p4-workspace-creator
project_urls =
    Bug Tracker = https://github.com/sachinrising/p4-workspace-creator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .