[metadata]
name = P4WorkspaceCreator
version = 1.0.2
author = sachin srivastava
author_email = sachinsasr@gmail.com
description = Create perforce workspace from the spec file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sachinrising/p4-workspace-creator
project_urls =
    Bug Tracker = https://github.com/sachinrising/p4-workspace-creator/issues
classifiers =
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.5, <3.10

install_requires =
    P4Python

[options.packages.find]
where = .

